--- a/app/index.html
+++ b/app/index.html
@@ -13,17 +13,45 @@
 	<header class="header">
 		<input type="checkbox" id="header__burger">
 		<nav class="nav">
-			<label class="burger_inside" for="header__burger"><span>close</span></label>
-			<a href="#portfolio" class="nav__item">portfolio</a>
-			<a href="#about" class="nav__item">about</a>
-			<a href="#team" class="nav__item">articles</a>
-			<a href="#contacts" class="nav__item">contact</a>
+			<a href="#portfolio" class="nav__item btn"><span>portfolio</span></a>
+			<a href="#about" class="nav__item btn"><span>portfolio</span></a>
+			<a href="#team" class="nav__item btn"><span>portfolio</span></a>
+			<a href="#contacts" class="nav__item btn"><span>portfolio</span></a>
 		</nav>
-		<label class="burger" for="header__burger">
+		<button class="burger">
 			Menu
-		</label>
+		</button>
 	</header>
 <section class="intro" id="intro">
+	<div class="intro__background">
+		<img class="intro__speaker" src="./assets/img/speaker.webp" alt="">
+		<div class="intro__waves">
+			<div class="intro__wave"></div>
+			<div class="intro__wave"></div>
+		</div>
+	</div>
+	<div class="intro__wrapper">
+		<div class="intro__logo logo">
+			<p class="logo__text">Muso</p>
+			<div class="logo__accent">
+				<p class="logo__text_accent">Ci</p>
+			</div>
+		</div>
+		<div class="intro__data">
+			<h2 class="intro__title">Best option for your greatest achievements</h2>
+			<ul class="intro__list list">
+				<li class="list__item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, consequuntur?
+				</li>
+				<li class="list__item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio facilis sunt
+					repudiandae, reprehenderit ab asperiores.</li>
+				<li class="list__item">Lorem ipsum dolor sit amet.</li>
+				<li class="list__item">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+				<li class="list__item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus reprehenderit
+					cupiditate facilis, dolorum amet quod ipsa ex enim animi aperiam!</li>
+			</ul>
+		</div>
+		<a href="#" class="intro__btn btn"><span>portfolio</span></a>
+	</div>
 </section>
 <script src="./assets/js/main-min.js"></script>
 </body>
